--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -41,6 +41,8 @@
 \floatsetup[table]{capposition=top}
 \usepackage[font={small,it}]{caption}
 
+\usepackage{rotating}
+
 \usepackage{tabularx}
 
 \usepackage[sort]{natbib} %uncomment for a harvard-style
@@ -487,7 +489,7 @@ Ylläpidettävyys on vaikuttava piirre testattavuuteen, joten on luonnollista ta
 \newpage
 
 \noindent
-Taulukkoon \ref{tab:maintainMeters} kootuista mittareista nähdään, että mittarit jakautuvat kahteen eri tarkkuuden tasoon. Arkkitehtuurisen kuvauksen ollessa abstraktio ohjelmakoodista on luonnollista, että eri tarkkuuden tasoilla on mahdollista liikkua. Tunnistetuiden mittareiden ominaisuuksista taas nähdään samankaltaisuutta kappaleen \ref{testability_measure} määriteltyjen mittareiden kanssa, mutta tunnistetut mittarit tarkastelevat korkeampaa tasoa. Kytkentä ja koheesio, joita kummatkin mittarit osittain mittaavat,  määriteltiin tavoiksi mitata järjestelmän testattavuutta. Kytkentää voidaan tutkia analysoimalla ohjelmistojärjestelmän komponenttien välisiä suhteita ja koheesiota tutkimalla kuinka itsenäisiä komponentit ovat.
+Taulukkoon \ref{tab:maintainMeters} kootuista mittareista nähdään, että mittarit jakautuvat karkeasti kahteen eri tarkkuuden tasoon: matalaan ja korkeaan. Syy siihen on, että arkkitehtuurisen kuvauksen ollessa abstraktio ohjelmakoodista on luonnollista, että eri tarkkuuden tasoilla on mahdollista liikkua. Tunnistetuiden mittareiden ominaisuuksista taas nähdään samankaltaisuutta kappaleen \ref{testability_measure} määriteltyjen mittareiden kanssa, mutta tunnistetut mittarit tarkastelevat korkeampaa tasoa. Kytkentä ja koheesio, joita kummatkin mittarisarjat osittain mittaavat,  määriteltiin tavoiksi mitata järjestelmän testattavuutta. Kytkentää voidaan tutkia analysoimalla ohjelmistojärjestelmän komponenttien välisiä suhteita ja koheesiota tutkimalla kuinka itsenäisiä komponentit ovat.
 
 \subsubsection{UML-kaaviot testattavuuden mittaamisessa} \label{uml_arch_test}
 
@@ -495,55 +497,49 @@ UML-luokkakaavio toimii hyvänä pohjana, kun halutaan mitata luokkien välisiä
 
 Antimallin osatekijöiden löytyminen arkkitehtuurista on siis vihje siitä, että arkkitehtuuri saattaa sisältää testauttavia vaikeuttavaa rakennetta. Osatekijöitä voidaan tarkastella esimerkiksi UML:n avulla luotavalla erityisellä riippuvuusgraafilla \citep{baudry_testability_2002}. Riippuvuuksien vähentäminen on kytkennän kannalta tärkeää ja on mahdollista tarkastella testauksen kannalta kriittisten riippuvuuksien poistoa analysoimalla luokkakaaviosta saatavia ominaisuuksia \citep{Jungmayr:2002}. Riippuvuudeksi lasketaan mikä tahansa komponenttien välinen interaktio, jossa komponentti joutuu käyttämään toisen komponentin tarjoamia palveluita (usein metodeja) suorittaakseen toiminnallisuuttaan. 
 
-\iffalse
-\begin{itemize} 
-	\item kompleksiset perintäsuhteet
-	\item abstraktien luokkien liikakäyttö rajapintojen sijasta.
-\end{itemize}
+Riippuvuuksiin littyviä tekijöitä voidaan havainnollistaa seuraavan taulukon avulla, jossa jokaiselle testautta vaikeuttavalle ominaisuudelle on annettu myös tapa, jolla ominaisuutta on mahdollista tarkastella helposti.
 
-\begin{itemize}
-	\item komponenttien keskimääräinen riippuvuuksien määrä
-	\item komponenttien määrä riippuvuussykleissä
-	\item \textit{feedback-riippuvuuksien\footnote{\textit{Feedback-riippuvuus} on syklinen riippuvuussuhde komponenttien välillä, josta poistamalla jokin riippuvuus saadaan sykli purettua täysin.}}  määrä 
-\end{itemize}
-\fi
 
 \begin{table}[H]
 	\centering
+	\setlength{\extrarowheight}{10pt}%
 	\resizebox{\linewidth}{!}{
-	\begin{tabular}{|c|c|c|}
+	\begin{tabularx}{500pt}{|X|X|X|}
 	\hline 
-	Ominaisuus & Tapa havaita & Lähde \\ 
+	\textbf{Ominaisuus} & \textbf{Tapa havaita} & \textbf{Lähde} \\ 
 	\hline 
 	Kompleksiset perintäsuhteet & Graafimalli & \citep{baudry_testability_2002} \\ 
 	\hline 
-	Abstraktien luokien liikakäyttö rajapintojen sijasta & Graafimalli & \citep{baudry_testability_2002} \\ 
+	Abstraktien luokkien liikakäyttö rajapintojen sijasta & Graafimalli & \citep{baudry_testability_2002} \\ 
 	\hline 
-	asd\newline lol & Luokkakaavio & \citep{Jungmayr:2002}\\ \hline
-	\end{tabular} 
+	Metriikat
+	\begin{itemize}
+		\item Riippuvuuksien määrä komponenteissa 
+		\item Komponenttien määrä riippuvuussykleissä
+		\item Feedback-riippuvuuksien määrä\footnote{Feedback-riippuvuus on syklinen riippuvuussuhde komponenttien välillä, josta poistamalla jokin riippuvuus saadaan sykli purettua täysin.}
+	\end{itemize}	 
+	& Graafimalli ja luokkakaavio & \citep{Jungmayr:2002}\\ \hline
+	\end{tabularx} 
 	\caption{Tekijöitä ongelmallisten riippuvuuksien syntymiselle.}
+	\label{tab:problemDepend}
 	}
 \end{table}
 
+\noindent
+Taulukossa \ref{tab:problemDepend} olevista tekijöistä huomataan, että riippuvuuksien tarkastelu testattavuuden kannalta on mahdollista UML-kaavion ja graafimallin avulla. Varsinkin sykliset riippuvuudet tulevat ilmi testattavuutta heikentävänä tekijänä, joiden tarkastelu ei välttämättä tule ollenkaan ilmi kooditasolla.  
 
-UML on mittareiden mukaan auttanut työkaluna löytämään yhteydellisiä ominaisuuksia arkkitehtuurissa, joita tarkastellessa voidaan sanoa tarkasteltavan  kytkennän tasoa, kompleksisuutta ja riippuvuuksia. Komponenttien sekä yhteyksien tarkastelu oli myös luvussa \ref{ark} esitelty eräs näkemys ohjelmistoarkkitehtuuriin ja on järjestelmän todellisen testattavuuden määrittelemisen kannalta parempi, jos testattavuutta voidaan tarkastellaan korkealla tasolla. Liian tarkka kuvaus järjestelmästä vaikeuttaa todellisten ongelmien näkemistä, koska se vie aikaa ymmärtää ja keskittyy liian pikkutarkkoihin asioihin, jotka eivät kaikki välttämättä ole relevantteja testattavuuden analysoinnin kannalta. Ylätason kuvauksella on etuna myös se, että sen avulla pystytään löytämään helposti usein esiintyviä ongelmallisia tilanteita, joiden tunnistaminen ja välttäminen auttaa järjestelmän testattavuuden hallinnassa.
+UML on auttanut työkaluna löytämään yhteydellisiä ominaisuuksia arkkitehtuurissa, joita tarkastellessa voidaan sanoa tarkasteltavan  kytkennän tasoa, kompleksisuutta ja riippuvuuksia. Komponenttien sekä yhteyksien tarkastelu oli myös luvussa \ref{ark} esitelty eräs näkemys ohjelmistoarkkitehtuuriin ja on järjestelmän todellisen testattavuuden määrittelemisen kannalta parempi, jos testattavuutta voidaan tarkastella myös korkealla tasolla. Liian tarkka kuvaus järjestelmästä vaikeuttaa todellisten ongelmien näkemistä, koska se vie aikaa ymmärtää ja keskittyy liian pikkutarkkoihin asioihin, jotka eivät kaikki välttämättä ole relevantteja testattavuuden analysoinnin kannalta. Ylätason kuvauksella on etuna myös se, että sen avulla pystytään löytämään helposti usein esiintyviä ongelmallisia tilanteita, joiden tunnistaminen auttaa järjestelmän testattavuuden hallinnassa.
 
  
 %UML on mahdollistanut testattavuuden arvioimisen ohjelmistojärjestelmissä, koska löydetyistä mittareista huomataan, että ne mittaavat esimerkiksi komponenttien ominaisuuksia ja yhteyksiä, jotka tulevat esille kunnolla vasta arkkitehtuurisella tasolla. Komponenttien sekä yhteyksien tarkastelu oli myös luvussa \ref{ark} esitelty eräs näkemys ohjelmistoarkkitehtuuriin ja on järjestelmän todellisen testattavuuden määrittelemisen kannalta parempi, jos testattavuutta voidaan tarkastellaan korkealla tasolla. Liian tarkka kuvaus järjestelmästä vaikeuttaa todellisten ongelmien näkemistä, koska se vie aikaa ymmärtää ja keskittyy liian pikkutarkkoihin asioihin, jotka eivät kaikki välttämättä ole relevantteja testattavuuden analysoinnin kannalta. Ylätason kuvauksella on etuna myös se, että sen avulla pystytään löytämään helposti usein esiintyviä ongelmallisia tilanteita, joiden tunnistaminen ja välttäminen auttaa järjestelmän testattavuuden hallinnassa.
 
 \subsection{Arkkitehtuuriset hajut ja testattavuus} \label{arch_smells_and_testability}
 
-Arkkitehtuurisiin hajuihin on alettu kinnittää yhä enemmän huomiota ohjelmien monimutkaistuessa ja suunnittelun tulevan yhä tärkeämmäksi osaksi ohjelmistojen elinkaarta. Ne ovat sukua tutummalle käsitteelle koodihaju, mutta tulevat esille arkkitehtuurisella tasolla, kun koodihajut tulevat esille luokkatasolla ja vaativat melkein aina lähdekoodin tunnistamisen tueksi. Arkkitehtuuriset hajut ovat pääosin suunnittelupäätöksiä, jotka negatiivisesti vaikuttavat järjestelmän elinkaareen ja muun muassa testattavuuten sekä ylläpidettävyyteen. Niitä ei voi pitää välttämättä virheinä, mutta ne vaikuttavat vähintään aina negatiivisesti laatuun \citep{de_andrade_architectural_2014}. Syitä arkkitehtuurisille hajuille voidaan nähdä olevan muun muassa 
-
-\begin{itemize}
-	\item suunnittelumalli väärässä kontekstissa
-	\item suunnitteluabstrahoinnin (design abstraction) käyttö niin, että sillä on ei-toivottuja vaikutuksia
-	\item suunnitteluabstrahoinnin käyttö väärällä tarkkuuden tasolla.
-\end{itemize} 
+Arkkitehtuurisiin hajuihin on alettu kinnittää yhä enemmän huomiota ohjelmien monimutkaistuessa ja suunnittelun tulevan yhä tärkeämmäksi osaksi ohjelmistojen elinkaarta. Ne ovat sukua tutummalle käsitteelle koodihaju, mutta tulevat esille arkkitehtuurisella tasolla, kun koodihajut tulevat esille luokkatasolla ja vaativat melkein aina lähdekoodin tunnistamisen tueksi. Arkkitehtuuriset hajut ovat pääosin suunnittelupäätöksiä, jotka negatiivisesti vaikuttavat järjestelmän elinkaareen ja muun muassa testattavuuten sekä ylläpidettävyyteen. Niitä ei voi pitää välttämättä virheinä, mutta ne vaikuttavat vähintään aina negatiivisesti laatuun \citep{de_andrade_architectural_2014}. Syitä arkkitehtuurisille hajuille voidaan nähdä olevan muun muassa: suunnittelumalli väärässä kontekstissa;  suunnitteluabstrahoinnin (design abstraction) käyttö niin, että sillä on ei-toivottuja vaikutuksia; suunnitteluabstrahoinnin käyttö väärällä tarkkuuden tasolla. Tutkimiseen voidaan käyttää analyyttistä lähestymistapaa, koska arkkitehtuuristen hajujen lähtökohtana toimii joku virheellinen arkkitehtuurinen päätös.
 
 %Testattavuus \citep{garcia_identifying_2009} yleisesti \citep{bertran_detecting_2011}.
 
-Yleisesti arkkitehtuuriin vaikuttavia hajuja voidaan löytää arkkitehtuurisella tasolla seuraavien metriikoiden avulla \citep{bertran_detecting_2011}
+Yleisesti on kuitenkin helpompi tutkia visuaalista informaatiota ja tämän avulla arkkitehtuuriin vaikuttavia hajuja. Arkkitehtuurisia hajuja voidaan löytää seuraavien metriikoiden avulla \citep{bertran_detecting_2011}
 
 \begin{itemize}
 	\item ei-haluttujen asiakas-komponenttien (client component) määrä
@@ -556,41 +552,28 @@ Yleisesti arkkitehtuuriin vaikuttavia hajuja voidaan löytää arkkitehtuurisell
 %\citep{HotSpot} arkkitehtuuriset hajut "hotspotit"\ 5kpl + kaikista altin virheille oli \citep[s. 57]{HotSpot} Unstable Interface \& Cross-Module Cycle.
 
 \noindent
-Näiden metriikoiden avulla sekä näkymällä moduulitasoon, olisi esimerkiksi hyvin mahdollistaa löytää yksi virhealttiillisin arkkitehtuurista löytyvä ongelmakohta \citep[s. 57]{HotSpot} \textit{Cross-Module Cycle}.
+Näiden metriikoiden avulla sekä näkymällä moduulitasoon, olisi esimerkiksi hyvin mahdollistaa löytää yksi virhealttiillisin arkkitehtuurista löytyvä ongelmakohta \textit{Cross-Module Cycle} \citep[s. 57]{HotSpot}. \textit{Cross-Module Cycle} on olemassa arkkitehtuurissa silloin, kun siinä on syklinen riippuvuussuhde moduulitasolla. Se vaikeuttaa testattavuutta siten, että testauksen aikana yhden moduulin testaaminen vaatii käytännössä myös kaikkien muiden moduulien testauksen, jolloin testitapausten eriyttäminen vaikeutuu huomattavasti. Sykliset riippuvuudet todettiin olevan myös kappaleessa \ref{good_testability} yksi testattavuuteen vaikuttava tekijä, mutta arkkitehtuurisia hajuja, jotka suoraan vaikuttavat testattavuuteen, voidaan tunnistaa olevan ainakin kaksi lisää \citep{garcia_identifying_2009}:  \textit{Connector Envy} ja \textit{Scattered Parasitic Functionality}.
 
-\paragraph{\textit{Cross-Module Cycle}} arkkitehtuurissa on olemassa syklinen riippuvuussuhde moduulitasolla. Se vaikeuttaa testattavuutta siten, että testauksen aikana yhden moduulin testaaminen vaatii käytännössä myös kaikkien muiden moduulien testauksen, jolloin testitapausten eriyttäminen vaikeutuu huomattavasti. Sykliset riippuvuudet todettiin olevan myös kappaleessa \ref{good_testability} yksi testattavuuteen vaikuttava tekijä.
+\textit{Connector Envy} on tilanne, jossa komponentti toteuttaa konnektorille kuuluvaa toiminnallisuutta eli toteuttaa esimerkiksi joko kommunikointia, koordinointia tai tiedon konversiota. Nämä toiminnallisuudet tulisi jättää konnektorin toteutettavaksi, koska komponentin toiminnallisuus ja interaktiot eivät ole enää erillään testattavia ominaisuuksia. Tilanteena se johtaa siihen, että ei pystytä enää varmasti sanomaan, että mikä kohta komponentissa oli virheellinen, jos se testauksen aikana hajoaa. \textit{Scattered Parasitic Functionality} syntyy, jos useammalla komponentilla on sama vastuu ja komponentit ovat itsenään vastuussa vielä jostain muusta vastuusta. Testattavuus kärsii tästä, koska esimerkiksi integraatiotestauksen aikana tapahtunut virhe vaikuttaa laajalla alueella ja vaikeuttaa vian alkuperän määrittämistä. 
 
-
-Arkkitehtuurisia hajuja, jotka vaikuttavat suoraan testattavuuteen voidaan tunnistaa olevan ainakin kaksi \citep{garcia_identifying_2009}
-
-\paragraph{\textit{Connector Envy}} tilanne, jossa komponentti toteuttaa konnektorille kuuluvaa toiminnallisuutta eli toteuttaa esimerkiksi joko kommunikointia, koordinointia tai tiedon konversiota. Nämä toiminnallisuudet tulisi jättää konnektorin toteutettavaksi, koska komponentin toiminnallisuus ja interaktiot eivät ole enää erillään testattavia ominaisuuksia. Tilanteena se johtaa siihen, että ei pystytä enää varmasti sanomaan, että mikä kohta komponentissa oli virheellinen, jos se testauksen aikana hajoaa.
-
-\paragraph{\textit{Scattered Parasitic Functionality}} tilanne, jossa useammalla komponentilla on sama vastuu ja ne ovat vastuussa myös jostain muusta vastuusta. Testattavuus kärsii tästä, koska esimerkiksi integraatiotestauksen aikana tapahtunut virhe vaikuttaa laajalla alueella ja vaikeuttaa vian alkuperän määrittämistä. 
-
-\noindent
-\\Testaukseen vaikuttavista arkkitehtuurisista hajusta voidaan huomata, että ne pyrkivät löytämään sykliset riippuvuudet, huonon koheesion ja mahdollisen riippuvuuksien jakautumisen turhan laajalle. Samat asiat jotka vaikuttavat luokkatasolla testattavuuteen vaikuttavat arkkitehtuurisella tasolla, mutta hieman eri tavalla. Tämän kannalta on hyvä yrittää löytää, että onko luokkatasoisemmilla koodihajuilla ja arkkitehtuurisilla hajuilla jotain yhtettä toisiinsa. 
+\newpage
+Testaukseen vaikuttavista arkkitehtuurisista hajusta voidaan huomata, että ne pyrkivät löytämään sykliset riippuvuudet, huonon koheesion ja mahdollisen riippuvuuksien jakautumisen turhan laajalle. Samat asiat jotka vaikuttavat luokkatasolla testattavuuteen vaikuttavat arkkitehtuurisella tasolla, mutta hieman eri tavalla. Arkkitehtuurisella tasolla tarkasteltavana voi olla usean eri luokan kokonaisuus eli komponentti, kun luokkatasolla tarkastelun alla voi olla yksittäiset luokat ja jopa yksittäiset metodit.
 
 
 \subsubsection{Koodihajujen ja arkkitehtuuristen hajujen suhde}
 
-Vale ym. ovat tutkimuksessaan tuoneet esille hybridihajut, jotka ovat sekoitus koodihajuja ja arkkitehtuurisia hajuja tuoden uuden näkökulman arkkitehtuuristen hajujen löytämiseksi myös testattavuuden kannalta. Koodipoikkeama (code anomaly) luetaan hybridihajuksi, jos \citep{vale_bad_2014}
+Arkkitehtuurin ja ohjelmakoodin suhde on luonnollisesti hyvin vahva ja monissa metriikoissa nähdään samankaltaisuuksia. Tätä suhdetta selittämään on tuota käsite hybridihajut, jotka ovat sekoitus koodihajuja ja arkkitehtuurisia hajuja tuoden uuden näkökulman arkkitehtuuristen hajujen löytämiseksi myös testattavuuden kannalta. Koodipoikkeama (code anomaly) luetaan hybridihajuksi, jos sen vaikuttamat luokat ovat vastuussa arkkitehtuurisista elementeistä vaikuttamissa arkkitehtuurisissa elementeissä on arkkitehtuurisia ongelmia \citep{vale_bad_2014}. Hybridihajujen tunnistaminen on siis eräs keino helpottaa arkkitehtuuristen hajujen löytämistä. Löytämällä koodihajujen pohjalta arkkitehtuurisiin vaikuttavia ongelmallisia luokkia, voidaan tunnistaa arkkitehtuurisella tasolla vastaavat arkkitehtuuriset hajut ja elementit. Arkkitehtuuristen hajujen tunnistaminen saattaa taas antaa tärkeää tietoa pinnan alla piilevistä koodihajuista.
 
-\begin{itemize}
-	\item sen vaikuttamat luokat ovat vastuussa arkkitehtuurisista elementeistä
-	\item vaikuttammissa arkkitehtuurisissa elementeissä on arkkitehtuurisia ongelmia.
-\end{itemize}
-
-\noindent
-Hybridihajujen tunnistaminen on siis eräs keino helpottaa arkkitehtuuristen hajujen löytämistä. Löytämällä koodihajujen pohjalta arkkitehtuurisiin vaikuttavia ongelmallisia luokkia, voidaan tunnistaa arkkitehtuurisella tasolla vastaavat arkkitehtuuriset hajut ja elementit. Arkkitehtuuristen hajujen tunnistaminen saattaa taas antaa tärkeää tietoa pinnan alla piilevistä koodihajuista.
-
-Lisää arkkitehtuuristen sekä koodihajujen yhteyksistä on tutkinut Macia ym. \citep{macia_impact_2011}. He löysivät, että tietyt koodihajut ovat indikaattoreita arkkitehtuurisista hajuista ja että tietyt ominaisuudet kooditasolla ovat syynä arkkitehtuurisiin hajuihin. 
+On tutkittu, että tietyt koodihajut ovat indikaattoreita arkkitehtuurisista hajuista aspektiorientoituneissa järjestelmissä ja tietyt ominaisuudet kooditasolla ovat syynä arkkitehtuurisiin hajuihin \citep{macia_impact_2011}. Seuraavassa taulukossa on lueteltu, että mitkä havaitut kooditason ongelmat löydettiin vaikuttavan arkkitehtuurisiin hajuihin. 
 
 % EI SELITTÄMÄTTÖMIÄ OSIA
 
 
 \begin{table}[ht]
 	\centering
-	\begin{tabular}{| l | l | m{3.2cm} |}
+	\setlength{\extrarowheight}{1pt}%
+	\resizebox{\linewidth}{!}{
+	\begin{tabular}{| m{5cm} | m{7cm} |}
 	\hline 
 	\textbf{Arkkitehtuurinen haju} & \textbf{Syy kooditasolla} \\ \hline
 	\textit{SPF} & Liikaa vastuita \\ \hline
@@ -599,7 +582,8 @@ Lisää arkkitehtuuristen sekä koodihajujen yhteyksistä on tutkinut Macia ym. 
 	\textit{SPF} & Samankaltaista toiminnallisuutta \\ 
 	\hline
 	\end{tabular}
-	\caption{Arkkitehtuurinen haju ja syy sen esiintymiselle kooditasolla. Vastaava koodihaju on jätetty pois, koska niiden tietäminen ei ole relevanttia tutkimuksen kannalta.}
+	}
+	\caption{Arkkitehtuurinen haju ja syy sen esiintymiselle kooditasolla. Vastaava koodihaju on jätetty pois, koska niiden nimien tietäminen ei ole relevanttia tutkimuksen kannalta.}
 	\label{tab:aspectSmells} 
 \end{table}
 
@@ -607,62 +591,67 @@ Lisää arkkitehtuuristen sekä koodihajujen yhteyksistä on tutkinut Macia ym. 
 %Koodi ja arkkitehtuuri-info. Detection strategies \citep[s. 179-182]{macia_enhancing_2013}
 
 \noindent
-Vaikka taulukon \ref{tab:aspectSmells} koodihajut eivät suoraan koske juuri olio-pohjaisia järjestelmiä, niistä voidaan silti nähdä, että ongelmat tulevat liiallisista vastuista, liiallisista riippuvuuksista ja samankaltaisesta toiminnallisuudesta. Nämä ominaisuudet ovat nähtävissä hyvin tavallisissakin olio-pohjaisissa järjestelmissä ja tätä faktaa tukee Macia ym. jatkotutkimus hieman samasta aiheesta, jossa tutkittiin arkkitehtuuri-herkkiä koodipoikkeamia puhtaissa oliopohjaisissa järjestelmissä. He tulivat testattavuuden kannalta seuraaviin päätelmiin \citep{macia_enhancing_2013}
+Vaikka taulukon \ref{tab:aspectSmells} koodihajut eivät suoraan koske olio-pohjaisia järjestelmiä, niistä voidaan silti nähdä, että ongelmat tulevat liiallisista vastuista, liiallisista riippuvuuksista ja samankaltaisesta toiminnallisuudesta. Nämä ominaisuudet ovat nähtävissä hyvin tavallisissakin olio-pohjaisissa järjestelmissä ja on määritelty, että mitkä arkkitehtuuri-herkät koodipoikkeamat olisivat vastuussa arkkitehtuurisista hajuista puhtaissa olio-järjestelmissä \citep{macia_enhancing_2013}.
+
+Seuraavassa taulukossa on muodostettu löydetyt koodihajut, jotka indikoivat pahemmasta ongelmasta arkkitehtuurisella tasolla.
 
 % NÄÄ VOIS SELITTÄÄ ESIM ALAINDEKSISSÄ
 
 
 \begin{table}[h]
 	\centering
-	\begin{tabular}{| l | l | m{3.5cm} |}
+	\setlength{\extrarowheight}{1pt}%
+	\resizebox{\linewidth}{!}{
+	\begin{tabular}{| l | l | m{6cm} |}
 	\hline
 	\textbf{Koodihaju} & \textbf{Arkkitehtuurinen haju} & \textbf{Syy}\\ \hline
-	\textit{God Class} & \textit{SPF, Connector Envy} &  Toiminnallisuus liian keskittynyttä, liialliset vastuut\\ \hline
-	\textit{Misplaced Class} & \textit{Cyclic Dependencies, SPF} & Riippuvuuksia enemmän komponentin ulkopuolelle kuin sisäpuolelle\\ \hline
+	\textit{God Class}\footnote{Luokka, joka tekee suuren osan järjestelmän toiminnallisuudesta.} & \textit{SPF, Connector Envy} &  Toiminnallisuus liian keskittynyttä, liialliset vastuut\\ \hline
+	
+	\textit{Misplaced Class}\footnote{Luokka, joka on väärässä moduulissa/komponentissa.} & \textit{Cyclic Dependencies, SPF} & Riippuvuuksia enemmän komponentin ulkopuolelle kuin sisäpuolelle\\ \hline
 	\end{tabular}
-	\caption{Olioperäisten koodihajujen ja arkkitehtuuristen hajujen suhde sekä niiden syyt.}
+	}
+	\caption{Olioperäisten koodihajujen ja arkkitehtuuristen hajujen suhde, sekä niiden syyt.}
 	\label{tab:codeSmells}
 \end{table}
 
 
 \noindent
-Taulukon \ref{tab:codeSmells} suhteista nähdään samanlaisuutta, kuin mitä taulukko \ref{tab:aspectSmells} näytti syinä sen koodihajuille. Suurimmat ongelmat olioperäisissäkin hajuissa tulivat liiallisista riippuvuuksista ja huonosta vastuiden jaosta, joka saattaa johtaa yksittäisten komponenttien paisumiseen. Yksittäisten komponenttien paisuminen taas luo helposti huonoa kompositiota, toistuvaa toiminnallisuutta ja komponentteja, joiden harteilla on iso osa toiminnallisuuden toteuttamisesta. Nämä ongelmat realisoituvat arkkitehtuurisiksi hajuiksi arkkitehtuuritasolla ja niiden tunnistaminen kooditasolta arkkitehtuuriselle tasolle ja arkkitehtuuriselta tasolta kooditasolle on tärkeää myös testattavuuden kannalta.
+Taulukon \ref{tab:codeSmells} suhteista nähdään hieman samanlaisuutta, kuin mitä taulukko \ref{tab:aspectSmells} näytti syinä sen koodihajuille. Suurimmat ongelmat olioperäisissäkin hajuissa tulivat liiallisista riippuvuuksista ja huonosta vastuiden jaosta, joka saattaa johtaa yksittäisten komponenttien paisumiseen. Yksittäisten komponenttien paisuminen taas luo helposti huonoa kompositiota, toistuvaa toiminnallisuutta ja komponentteja, joiden harteilla on iso osa toiminnallisuuden toteuttamisesta. Nämä ongelmat realisoituvat arkkitehtuurisiksi hajuiksi arkkitehtuuritasolla ja niiden tunnistaminen kooditasolta arkkitehtuuriselle tasolle ja arkkitehtuuriselta tasolta kooditasolle on tärkeää testattavuuden kannalta.
 
 
 %Koodihajujen tunnistaminen arkkitehtuurisen degraation tunnistamiseksi \citep{fontana_towards_2015}. Vaikuttavat ylläpidettävyyteen. God Class, Data Class, Brain Method, Shotgun Surgery, Dispersed Coupling, Message Chains. Metriikoina käytettiin muun muassa: Tight Class Cohesion, Access to Foreign Data, Number of Public Attributes, Maximum Nesting Level, Coupling Intensity. Co-Occurence of smells. 
 
-Tarkastelu voidaan keskittää myös enemmän aiheisiin kuten mistä koodihajut johtuvat tai mitkä tekijät koodihajuissa vaikuttavat arkkitehtuuristen hajujen esiintymiseen järjestelmissä. Tähän avuksi Fontana, Ferme ja Zanoni loivat erityisen näkymän koodihajujen tunnistamiseksi ja tunnistivat kytkentään ja koheesioon vaikuttavia koodihajuja. Kytkentään ja koheesioon vaikuttivat koodihajut, jotka olivat suoraan vastuussa muun muassa \citep{fontana_towards_2015}
+Tarkastelu voidaan keskittää myös enemmän aiheisiin kuten mistä koodihajut johtuvat tai mitkä tekijät koodihajuissa vaikuttavat arkkitehtuuristen hajujen esiintymiseen järjestelmissä. Tähän avuksi on luotu erityisen näkymä koodihajujen tunnistamiseksi ja sen avulla voidaan tunnistaa kytkentään ja koheesioon vaikuttavia koodihajuja \citep{fontana_towards_2015}. 
 
-% SELITÄ TAI POISTA
+\begin{table}[H]
+	\centering
+	\setlength{\extrarowheight}{4pt}%
+	\resizebox{\linewidth}{!}{
+	\begin{tabular}{| m{4cm} | m{8cm} | m{4cm} |}
+	\hline
+		\textbf{Koodihaju} & \textbf{Vastuussa} & \textbf{Vaikuttaa}\\ \hline
+		\textit{God Class} & Suuret luokat & Koheesio \& Kytkentä\\ \hline
+		\textit{Long Method} & Pitkät metodit & Koheesio \& Kytkentä\\ \hline
+		\textit{Dispersed Coupling} & Laajalle hajautunut kytkentä & Koheesio \& Kytkentä\\ \hline
+		\textit{Shotgun Surgery} & Replikoituvasta muutoksen vaatimasta kohdealueesta & Koheesio\\ \hline
+	\end{tabular}
+	}
+	\caption{Suoraan kytkentään ja koheesioon suhteessa olevat koodihajut. }
+	\label{tab:coupAndCohes}
+\end{table}
 
-\begin{itemize}
-	\item suurista luokista (\textit{God Class})
-	\item pitkistä metodeista (\textit{Long Method})
-	\item laajalle hajautuneesta kytkennästä (\textit{Dispersed Coupling})
-	\item replikoituvasta muutoksen vaatimasta kohdealueesta (\textit{Shotgun Surgery})
-\end{itemize}
 
 \noindent
-Näistä löydetyistä tekijöistä arkkitehtuuritasolla kiinnostavimmat olisivat suuret luokat ja komponentit, joiden vastuualue on hajautunut liian laajalle sekä joiden toimintaa on vaikea muuttaa ilman muuttamatta muita komponentteja.
+Taulukon \ref{tab:coupAndCohes} tekijöistä nähdään, että ongelmat syntyvät, jos jokin luokka on liian suuri, sisältää riippuvuuksia paljon muihin luokkiin ja jonka toiminnallisuus on hajautunut niin laajalle, että sen muuttaminen vaatii usean muutoksen eri kohteisiin. Tätä samaa ideaa olisi mahdollista soveltaa myös arkkitehtuurisella tasolla ja tutkia komponenttien näkökulmalta samoja asioita. 
 
-On siis edellisten tarkasteluiden nojalla selvää, että hyvä kytkennän ja koheesion taso ovat tavoteltavia ominaisuuksia sekä kooditasolla että arkkitehtuuritasolla. Testattavuuden kannalta voidaan arvioida mitkä tekijät aiheuttavat kahta mainittua testattavuuteen vaikuttavaa arkkitehtuurista hajua, josta tuloksena saatiin, että merkkittäviä tekijöitä olivat vastuut, riippuvuudet, koheesio, kytkentä. Tekijöiden mittaamisen apuna arkkitehtuuriselta tasolta voidaan muun muassa käyttää luvussa \ref{arch_testability_measurement} esiteltyjä mittareita. Hybridihajujen tunnistaminen on tärkeää, koska ne saattavat toimia kriittisenä linkkinä arkkitehtuurin ja koodipohjaisten ongelmien välillä. 
+On edellisten tarkasteluiden nojalla selvää, että hyvä kytkennän ja koheesion taso ovat tavoteltavia ominaisuuksia sekä kooditasolla että arkkitehtuuritasolla. Testattavuuden kannalta voidaan arvioida mitkä tekijät aiheuttavat kahta mainittua testattavuuteen vaikuttavaa arkkitehtuurista hajua, josta tuloksena saatiin, että merkkittäviä tekijöitä olivat vastuut, riippuvuudet, koheesio, kytkentä. Tekijöiden mittaamisen apuna arkkitehtuuriselta tasolta voidaan muun muassa käyttää luvussa \ref{arch_testability_measurement} esiteltyjä mittareita. Hybridihajujen tunnistaminen on yleisesti tärkeää, koska ne saattavat toimia kriittisenä linkkinä arkkitehtuurin ja koodipohjaisten ongelmien välillä. 
 
 
 \subsection{UML uusien näkymien tukena}
 
 
-Standardi UML-kaavio ei itsessään riitä näyttämään kaikkia testattavuuden kannalta tärkeitä näkökulmia arkkitehtuurisella tasolla, mutta sen tueksi on luotu useita menetelmiä, jotka hyödyntävät esimerkiksi jo valmista UML-luokkakaaviota. Eräs näistä on \textit{class dependency graph model} \citep{baudry_testability_2002}, joka kappaleessa \ref{uml_arch_test} tuli esille. Sen avulla on mahdollista nähdä 
-
-\begin{itemize}
-	\item luokkien välistä suurta interaktiota
-	\item itsekäyttöä
-	\item interaktioiden kompleksisuutta
-	\item pitkiä luokkahierarkisia haaraumia
-	\item kompleksisia rajapinta periytymiä.
-\end{itemize}
-
-\noindent
-Kaikista näistä olisi mahdollista luoda erilaisia metriikoita ja saada laskettua kytkennän, perinnän ja yleisen kompleksisuuden tasoa testattavuuden näkökulmalta, mutta tämä tuottaa ongelmia, koska jotkut tulokset saattavat olla vääriä niiden sisältäessä virheellistä esiintymää (false-positive results). Tähän ongelmaan on ehdotettu UML-kaavion jatkamista stereotyyppien avulla. Uusia kytköksiä riippuvuuksille ehdotetaan 4 kappaletta \citep[s. 4]{baudry_measuring_2003}
+Standardi UML-kaavio ei itsessään riitä näyttämään kaikkia testattavuuden kannalta tärkeitä näkökulmia arkkitehtuurisella tasolla, mutta sen tueksi on luotu useita menetelmiä, jotka hyödyntävät esimerkiksi jo valmista UML-luokkakaaviota. Eräs näistä on \textit{class dependency graph model} \citep{baudry_testability_2002}, joka kappaleessa \ref{uml_arch_test} tuli esille. Sen avulla on mahdollista nähdä muun muassa luokkien välistä suurta interaktiota, itsekäyttöä, interaktioiden kompleksisuutta, pitkiä luokkahierarkisia haaraumia ja kompleksisia periytymisiä rajapintatasoilla.
+Kaikista näistä olisi mahdollista luoda erilaisia metriikoita ja saada laskettua kytkennän, perinnän ja yleisen kompleksisuuden tasoa testattavuuden näkökulmalta. Mutta tämä tuottaa ongelmia, koska jotkut tulokset saattavat olla vääriä niiden sisältäessä virheellistä esiintymää (false-positive results). Tähän ongelmaan on ehdotettu UML-kaavion jatkamista stereotyyppien avulla. Uusia kytköksiä riippuvuuksille ehdotetaan 4 kappaletta \citep[s. 4]{baudry_measuring_2003}
 
 \begin{itemize}
 	\item \textit{create}, jos luokka A luo luokan B
@@ -687,13 +676,11 @@ Kyseisten stereotyyppien avulla saadaan esille riippuvuudet ja niiden tyypit par
 
 \subsection{Havaitut testattavuuteen vaikuttavat tekijät}
 
-Kaikista tutkielman aikana löytyneistä testattavuuteen vaikuttavista tekijöistä, jotka tulevat myös arkkitehtuurisella tasolla ilmi, voidaan nyt muodostaa seuraavanlainen taulukko
-
-	%\begin{adjustbox}{center}
-	\begin{table}
+\begin{sidewaystable}[H]
 	\centering
-		\resizebox{\linewidth}{!}{
-		\begin{tabular}{| m{3cm} | m{4cm} | m{4cm} | m{3.5cm} |}
+	\setlength{\extrarowheight}{10pt}%
+	\resizebox{\linewidth}{!}{
+		\begin{tabular}{| m{3cm} | m{10cm} | m{6cm} | m{4cm} |}
 		\hline
 	\textbf{Tekijä} & \textbf{Tarkennus} & \textbf{Menetelmä} & \textbf{Lähde}\\ \hline
 	
@@ -714,9 +701,11 @@ Kaikista tutkielman aikana löytyneistä testattavuuteen vaikuttavista tekijöis
 		\end{tabular}
 		}
 		\caption{Testattavuuteen vaikuttavat tekijät arkkitehtuurisella tasolla. Tarkennus-sarake antaa lisätietoa menetelmästä ja Menetelmä-sarake kuvaa miten niitä voidaan havaita. Lähde-sarake kertoo mikä tutkimus on tutkinut aihetta ja mahdollisesti esittänyt jonkun menetelmistä.}
-	\end{table}
+	\end{sidewaystable}
 
-\newpage
+Kaikista tutkielman aikana löytyneistä testattavuuteen vaikuttavista tekijöistä, jotka tulevat myös arkkitehtuurisella tasolla ilmi, voidaan nyt muodostaa seuraavanlainen taulukko
+
+
 
 \section{Pohdinta} \label{pondering}
 
